@startuml
top to bottom direction

title Domain Classes (DC) - US 2006

hide methods
skinparam classAttributeIconSize 0

'TakenExam
package "<<aggregate>> TakenExam" {
    entity TakenExam <<entity>> <<root>>
    class TakenExamDateTime <<(V, #FF8B40) value object>>
    class Grade <<(V, #FF8B40) value object>>
}

'Student
package "<<aggregate>> Student" {
    entity Student <<entity>> <<root>>
    class MechanographicNumber <<(V, #FF8B40) value object>>
}

'Exam
package "<<aggregate>> Exam" {
    entity Exam <<entity>> <<root>>
}

'Course
package "<<aggregate>> Course" {
    entity Course <<entity>> <<root>>
    class CourseTitle <<(V, #FF8B40) value object>>
    class CourseCode <<(V, #FF8B40) value object>>
    class CourseDescription <<(V, #FF8B40) value object>>
    class CourseStatus <<(V, #FF8B40) value object>>
    class CourseEnrolmentLimits <<(V, #FF8B40) value object>> {
        minimumEnrolments
        maximumEnrolments
    }
}

'Enrollment
package "<<aggregate>> Enrollment" {
    entity Enrollment <<entity>> <<root>>
    class EnrollmentStatus <<(V, #FF8B40) value object>>
}

'Teacher
package "<<aggregate>> Teacher" {
    entity Teacher <<entity>> <<root>>
    class Acronym <<(V, #FF8B40) value object>>
}

TakenExam -down-> TakenExamDateTime
TakenExam -down-> Grade
TakenExam "0..*" --> "1" Student : taken by >
TakenExam "0..*" --> "1" Exam : is >

Course -down-> CourseTitle
Course -down-> CourseCode
Course -down-> CourseDescription
Course -down-> CourseStatus
Course -down-> CourseEnrolmentLimits
Course "1" --> "1" Teacher : has responsible >
Course "1..*" --> "1..*" Teacher : is taught >
Course "1" --> "0..*" Enrollment : has >

Enrollment "1..*" --> "1" Student : has

Student -down-> MechanographicNumber

Enrollment -down-> EnrollmentStatus

Teacher -down-> Acronym

Exam "0..*" --> "1" Teacher : created by >

@enduml